# ddmcp

./: .env.example  .gitignore  DEPLOYMENT.md  DOCKER-NETWORK-SETUP.md  Dockerfile  LICENSE  PLAN.md  QUICK-START.md  README.md  com.ddmcp.server.plist  ddmcp.service  docker-compose.yml  install-windows-service.bat  pyproject.toml
client-configs/: claude-desktop-http.json
src/ddmcp/: __init__.py  client.py  config.py  formatting.py  http_server.py  server.py
src/ddmcp/domains/: __init__.py
src/ddmcp/domains/apm/: __init__.py  formatting.py  services.py  spans.py
tests/: __init__.py  conftest.py  test_server.py
tests/domains/apm/: __init__.py  test_formatting.py  test_services.py  test_spans.py
